[gd_scene load_steps=6 format=2]

[ext_resource path="res://components/game/actor/views/ActorView.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/game/actor/states/ActorStateIdle.gd" type="Script" id=2]
[ext_resource path="res://components/game/actor/ActorController.gd" type="Script" id=3]
[ext_resource path="res://components/game/actor/states/ActorStateWander.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 30.0

[node name="ActorController" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 7
script = ExtResource( 3 )

[node name="States" type="Node" parent="."]

[node name="StateIdle" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="StateWander" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="View" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
